--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.19.2",
     "hapi": "^18.1.0",
     "jest": "^29.7.0",
+    "pg-promise": "^11.8.0",
     "ts-jest": "^29.1.2"
   },
   "devDependencies": {
